--- a/artist3/global.css
+++ b/artist3/global.css
@@ -121,7 +121,7 @@ header nav ul li a{
 
 .grid{
 /* 	overflow:hidden; same as clear:both*/
-	margin-top: 40px;
+	margin-top: 45px;
 }
 
 .grid:after{
@@ -132,7 +132,11 @@ header nav ul li a{
 
 [class*='col-']{
 	float:left;
-	padding:5px 10px;
+	padding: 0 30px;
+}
+
+[class*='col-']:last-of-type {
+	padding-left: 0;
 }
 
 .col-1-3{
@@ -142,7 +146,6 @@ header nav ul li a{
 .col-2-3{
 	width:66.66%;
 }
-
 
 /* box */
 .box {
@@ -154,9 +157,8 @@ header nav ul li a{
 	background-color: #f8f8f8;
 }
 
-
 .box h2{
-	text-align: left;
+
 	font-family:'Play', arial, sans-serif;
 	font-size: 18px;
 	color:#ff952c;
@@ -164,11 +166,21 @@ header nav ul li a{
 }
 
 .box ul li{
-	text-align: left;
 	font-family:'Ruluko', arial, sans-serif;
 	font-size: 16px;
 	color:blue;
 	margin-bottom: 5px;
+	
+}
+
+.box ul li a {
+	color: blue;
+	text-decoration: none;
+}
+
+.box ul li a:hover{ /* no space after ":" */
+	color:purple;
+	text-decoration: underline;
 }
 
 /* type design */
@@ -195,8 +207,6 @@ header nav ul li a{
 	color:#ff952c;
 }
 
-
-
 /* Picture floats */
 .picFloatLeft {
 	float:left;
@@ -205,7 +215,7 @@ header nav ul li a{
 
 .picFloatRight {
 	float:right;
-	margin:0 20px 0px 20px;
+	margin:0 0px 20px 20px;
 }
 
 
