--- a/style.css
+++ b/style.css
@@ -69,11 +69,19 @@ em {
 /* End CSS Reset */
 
 body {
+	background-image: url("images/pink-cakes.jpg");
+}
+
+.greeting {
 	background-color: #ffffff;
+	opacity: 0.7;
+	filter: alpha(opacity=70);/* For IE8 and earlier */
 }
 
 #container {
-	background-color: #fdcfcf;
+	background-color: #ffffff;
+	opacity: 0.8;
+	filter: alpha(opacity=80);
 	width: 1150px;
 	margin: 0 auto;
 	margin-top: 50px;
@@ -107,14 +115,14 @@ body {
 	font-size: 20px;
 	line-height: 1.3em;
 	margin-bottom: 50px;
-	border-top: 1px dotted gray;
+	border-top: 1px solid gray;
 }
 
 .grid.front-row h2 {
 	font-size: 20px;
 	font-family: 'Coming Soon', Arial, sans-serif;
 	color: black;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	border-top: 0px;
 }
 
