--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ h1 {
 
 .modalDialog {
 	position: fixed;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Coming Soon', arial, sans-serif;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -172,10 +172,22 @@ h1 {
 	margin: 10% auto;
 	padding: 5px 20px 13px 20px;
 	border-radius: 10px;
-	background: #fff;
-	background: -moz-linear-gradient(#fff, #999);
-	background: -webkit-linear-gradient(#fff, #999);
-	background: -o-linear-gradient(#fff, #999);
+	background: #ffffff;
+}
+
+/* text design*/
+.modalDialog {
+	font-family: 'Coming Soon', Arial, sans-serif;
+	font-size: 18px;
+	color: #3f1313;
+	line-height: 2.5em;
+}
+
+#modal-submit {
+	font-family: 'Coming Soon', Arial, sans-serif;
+	font-size: 16px;
+	color:#ffffff;
+	background-color: #ff76b4;
 }
 
 .close {
@@ -197,4 +209,4 @@ h1 {
 	box-shadow: 1px 1px 3px #000;
 }
 
-.close:hover { background: #00d9ff; }
+.close:hover { background: #ff76b4; }
