--- a/style.css
+++ b/style.css
@@ -69,20 +69,22 @@ em {
 /* End CSS Reset */
 
 body {
-	background-image: url("images/pink-cakes.jpg");
+	background-image: url("images/pink-cupcakes.jpg");
 }
 
 .greeting {
 	background-color: #ffffff;
 	opacity: 0.8;
-	filter: alpha(opacity=70);/* For IE8 and earlier */
+	filter: alpha(opacity=80);/* For IE8 and earlier */
 	padding:10px;
 	width: 950px;
 	margin: 0 auto;
 }
 
 #container {
-	background-color: #feeff4;
+	background-color: #ffffff;
+	opacity: 0.8;
+	filter: alpha(opacity=80);
 	width: 950px;
 	margin: 0 auto;
 	margin-top: 50px;
@@ -91,9 +93,9 @@ body {
 }
 
 .grid {
-  margin: 0 0 10px 0;
+	margin: 0 0 10px 0;
   /* Top Right Bottom Left */
-  padding-bottom: 5px;
+  	padding-bottom: 5px;
 }
 
 
