--- a/deyoung/style.css
+++ b/deyoung/style.css
@@ -93,7 +93,6 @@ header nav {
 	float: right;
 }
 
-
 nav ul li {
 	float: left;
 	border-left: 1px dotted black;
@@ -107,6 +106,7 @@ nav ul li a {
 	font-family: 'Open Sans',arial, sans-serif;
 	color: #404040;
 	font-size: 12px;
+	line-height: 0.5em;
 	padding: 10px;
 	display: block;/* add padding on top */
 }
