--- a/deyoung2/style.css
+++ b/deyoung2/style.css
@@ -67,7 +67,6 @@ table {
 
 header {
 	overflow: hidden;
-	
 }
 
 #title {
@@ -185,14 +184,14 @@ nav ul li a:hover {
 
 .col-1-3 {
 	width: 33.33%;
-	padding:5px;
+	padding-right:10px;
 }
 
 h2 {
 	font-family: 'Roboto Condensed',arial, sans-serif;
 	color: #000000;
 	font-size: 18px;
-	line-height: 1.5em;
+	line-height: 1.9em;
 }
 
 h3 {
@@ -212,45 +211,54 @@ p {
 
 /* footer */
 footer {
-	background-color: #b4b4b4;
-	background-image: url('images/its-a-trap.jpg');
+	background-color: #d5d5d5;
+	background-image: url('images/tripadvisor.jpg');
 	min-height: 150px;
 	background-repeat: no-repeat;
-	background-position-x: 99%;
+	background-position-x: 95%;
 	background-position-y: center;
-	padding:20px 170px 20px 20px;
+	padding:20px 220px 20px 20px;
+	margin-top: 20px;
 }
 
-footer /* .grid */ h2 {
-	color:white;
-	font-size:20px;
-	font-family: verdana, arial,sans-serif;
-	padding-bottom: 7px;
-	margin-bottom: 7px;
-	border-bottom: 1px dotted white;
+.col-1-4 {
+	width: 25%;
+	padding:15px;
+}
+
+.col-1-2 {
+	width:50%;
+	padding: 15px;
+}
+
+footer h2 {
+	color:#ffffff;
+	font-size:18px;
+	font-family: 'Roboto Condensed', arial,sans-serif;
+	padding-bottom: 5px;
+	margin-bottom: 5px;
+	line-height: 1.3em;
 }
 
 footer ul li {
-	color:white;
-	font-weight: bold;
-	border-bottom: 1px solid white;
-	margin-bottom: 4px;
-	padding-bottom: 4px;
+	margin-bottom: 3px;
+	padding-bottom: 5px;
 	overflow:hidden; /* hold things in place */
 }
 
-footer ul li:last-child {
-	border-bottom: 0 solid white;
-	padding-bottom: 0px;
+footer ul li a{
+	color:#404040;
+	font-family: 'Roboto',arial, sans-serif;
+	font-weight: 300;
+	font-size: 14px;
+	text-decoration: none;
 }
 
-.day {
-	float:left;
+footer ul li a:hover {
+	color: #ff3f3f;
+	text-decoration: none;
 }
 
-.hours {
-	float:right;
-}
 
 
 
