--- a/deyoung2/style.css
+++ b/deyoung2/style.css
@@ -174,7 +174,7 @@ nav ul li a:hover {
 
 .grid [class*='col-'] {
 	float:left;
-	padding-right: 20px;
+	padding-left: 8px;
 }
 
 
@@ -184,7 +184,6 @@ nav ul li a:hover {
 
 .col-1-3 {
 	width: 33.33%;
-	padding-right:10px;
 }
 
 h2 {
